unpackaged/main/default/objects/Tutor_Course__c/Tutor_Course__c.object-meta.xml
<CustomObject>
    <label>Tutor Course Section</label>
    <nameField>
        <label>Tutor Course Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tutor Course Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>