unpackaged/main/default/objects/Tutor_Course__c/fields/Active_Teachers__c.field-meta.xml
<CustomField>
    <fullName>Active_Teachers__c</fullName>
    <description>From Tutor</description>
    <label>Active Teachers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>