unpackaged/main/default/objects/Tutor_Course__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Book__c.Tutor_Subject__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Tutor Course Sections</relationshipLabel>
    <relationshipName>Tutor_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>