unpackaged/main/default/objects/Tutor_Course__c/fields/Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Book_Name__c</fullName>
    <description>From Tutor</description>
    <label>Book Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>