unpackaged/main/default/objects/Tutor_Course__c/fields/Class_Size__c.field-meta.xml
<CustomField>
    <fullName>Class_Size__c</fullName>
    <formula>IF(AND(Students_Using__c &gt;= 3,Students_Using__c &lt;= 50),"Small",
IF(AND(Students_Using__c &gt;= 51,Students_Using__c &lt;= 100), "Med",
IF(AND(Students_Using__c &gt;= 101,Students_Using__c &lt;= 150), "Large",
IF(Students_Using__c &gt; 151, "XLG",
NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Size</label>
    <type>Text</type>
</CustomField>