unpackaged/main/default/objects/Tutor_Course__c/fields/Class_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Start_Date__c</fullName>
    <formula>CASE( TEXT(Term__c) , 
"Fall", Opportunity__r.Fall_Start_Date__c , 
"Spring",  Opportunity__r.Spring_Start_Date__c ,
 Opportunity__r.Class_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Start Date</label>
    <type>Date</type>
</CustomField>