unpackaged/main/default/objects/Tutor_Course__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>From Tutor (if possible)</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Tutor_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>