unpackaged/main/default/objects/Tutor_Course__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <description>From Tutor</description>
    <label>Course Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>