unpackaged/main/default/objects/Tutor_Course__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>From Tutor</description>
    <label>Course Name</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>