unpackaged/main/default/objects/Tutor_Course__c/fields/E_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>E_Created_Date__c</fullName>
    <description>From Tutor</description>
    <label>E Created Date</label>
    <type>Date</type>
</CustomField>