unpackaged/main/default/objects/Tutor_Course__c/fields/Email_F__c.field-meta.xml
<CustomField>
    <fullName>Email_F__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>