unpackaged/main/default/objects/Tutor_Course__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>From Tutor</description>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>