unpackaged/main/default/objects/Tutor_Course__c/fields/Estimated_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Enrollment__c</fullName>
    <description>From Tutor</description>
    <label>Estimated Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>