unpackaged/main/default/objects/Tutor_Course__c/fields/External_UUID__c.field-meta.xml
<CustomField>
    <fullName>External_UUID__c</fullName>
    <description>From Tutor</description>
    <label>External UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>