unpackaged/main/default/objects/Tutor_Course__c/fields/KIP__c.field-meta.xml
<CustomField>
    <fullName>KIP__c</fullName>
    <formula>Opportunity__r.Account.K_I_P__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KIP</label>
    <type>Checkbox</type>
</CustomField>