unpackaged/main/default/objects/Tutor_Course__c/fields/Latest_Adoption_Decision__c.field-meta.xml
<CustomField>
    <fullName>Latest_Adoption_Decision__c</fullName>
    <description>From Tutor</description>
    <label>Latest Adoption Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For course credit</fullName>
            </value>
            <value>
                <fullName>For Extra Credit</fullName>
            </value>
            <value>
                <fullName>As an additional resource</fullName>
            </value>
            <value>
                <fullName>I dont know yet</fullName>
            </value>
            <value>
                <fullName>I won't be using it</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>