unpackaged/main/default/objects/Tutor_Course__c/fields/Main_Course__c.field-meta.xml
<CustomField>
    <fullName>Main_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Course</label>
    <type>Checkbox</type>
</CustomField>