unpackaged/main/default/objects/Tutor_Course__c/fields/Paid_Course__c.field-meta.xml
<CustomField>
    <fullName>Paid_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Course</label>
    <type>Checkbox</type>
</CustomField>