unpackaged/main/default/objects/Tutor_Course__c/fields/Period_UUID__c.field-meta.xml
<CustomField>
    <fullName>Period_UUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Period UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>