unpackaged/main/default/objects/Tutor_Course__c/fields/Possible_Students__c.field-meta.xml
<CustomField>
    <fullName>Possible_Students__c</fullName>
    <formula>CASE( Term__c ,
"Fall",Opportunity__r.Fall_Students__c,
"Spring",Opportunity__r.Spring_Students__c,
"Summer",Opportunity__r.Summer_Students__c,
Opportunity__r.Spring_Students__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Possible Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>