unpackaged/main/default/objects/Tutor_Course__c/fields/Research_Project__c.field-meta.xml
<CustomField>
    <fullName>Research_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From Tutor</description>
    <label>Research Project</label>
    <type>Checkbox</type>
</CustomField>