unpackaged/main/default/objects/Tutor_Course__c/fields/Run_Flow__c.field-meta.xml
<CustomField>
    <fullName>Run_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Flow</label>
    <type>Checkbox</type>
</CustomField>