unpackaged/main/default/objects/Tutor_Course__c/fields/School_Location__c.field-meta.xml
<CustomField>
    <fullName>School_Location__c</fullName>
    <formula>Contact__r.Account.School_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Location</label>
    <type>Text</type>
</CustomField>