unpackaged/main/default/objects/Tutor_Course__c/fields/School_Parent__c.field-meta.xml
<CustomField>
    <fullName>School_Parent__c</fullName>
    <formula>Contact__r.Account.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Parent</label>
    <type>Text</type>
</CustomField>