unpackaged/main/default/objects/Tutor_Course__c/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Type )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Type</label>
    <type>Text</type>
</CustomField>