unpackaged/main/default/objects/Tutor_Course__c/fields/Skip_Automation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Automation</label>
    <type>Checkbox</type>
</CustomField>