unpackaged/main/default/objects/Tutor_Course__c/fields/Students_Paid__c.field-meta.xml
<CustomField>
    <fullName>Students_Paid__c</fullName>
    <description>From Tutor</description>
    <label>Students Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>