unpackaged/main/default/objects/Tutor_Course__c/fields/Students_With_Work__c.field-meta.xml
<CustomField>
    <fullName>Students_With_Work__c</fullName>
    <description>From Tutor</description>
    <label>Students With Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>