unpackaged/main/default/objects/Tutor_Course__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>From Tutor</description>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>Preview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>