unpackaged/main/default/objects/Tutor_Course__c/fields/Tutor_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Tutor_Pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From Tutor</description>
    <label>Tutor Pilot</label>
    <type>Checkbox</type>
</CustomField>