unpackaged/main/default/objects/Tutor_Course__c/fields/Tutor_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Tutor_Renewal__c</fullName>
    <formula>IF(
Base_Year__c - YEAR(Contact__r.Initial_tutor_date__c) - IF( MONTH(Contact__r.Initial_tutor_date__c) &gt; 6, 0, 1)  

   &gt;0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tutor Renewal</label>
    <type>Checkbox</type>
</CustomField>